[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biblib"
version = "0.1.0"
description = "Simple, correct BibTeX parser and algorithms"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"  # SPDX identifier (updated!)
authors = [
  { name = "Austin Clements", email = "aclements@csail.mit.edu" }
]
keywords = ["bibtex", "tex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://github.com/aclements/biblib"

[tool.setuptools.packages.find]
where = ["."]
include = ["biblib"]

