[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biblib"
version = "0.1.0"
description = "Simple, correct BibTeX parser and algorithms"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Austin Clements", email = "aclements@csail.mit.edu" }
]
keywords = ["bibtex", "tex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Text Processing"
]

[project.urls]
homepage = "https://github.com/aclements/biblib"

